Simplify set building (#90401)